<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="MsgData">Data</string>
    <string name="MsgOperation">Operation</string>
    <string name="MsgExtra">Extra</string>

    <string name="dbName">ot.db</string>

    <string name="TextSuspenso">…</string>

    //PopUp:
    <string name="TitleInsert">Agregar</string>
    <string name="TitleUpdate">Editar</string>
    <string name="TitleDelete">Eliminar</string>
    <string name="TitleView">Ver</string>
    <string name="TitleExport">Exportar</string>

    //PopUpExport:
    <string name="TitleExportXML">XML</string>
    <string name="TitleExportJSON">Json</string>
    <string name="TitleExportCSV">CSV</string>

    //Custom Widget:
    <string name="component_one">Custom Component 1</string>
    <string name="component_two">Custom Component 2</string>
    <string name="component_three">Custom Component 3</string>
    <string name="hint_custom_text_edit">Type something for</string>

    //SwipeMenuItemCrud:
    <string name="ActionResultForCrudUpdate">Actualizar</string>
    <string name="ActionResultForCrudDelete">Eliminar</string>
    <string name="ActionResultForCrudView">Visualizar</string>

    <!--    //Generic:-->
    <string name="ActivityGenericHintSearch">Ingrese un criterio de búsqueda</string>
    <string name="ActivityGenericFilter">Filtro</string>

    <!--    //Model:-->
    <string name="ModelTextIsEnabled">Activo</string>
    <string name="ModelTextIsDefault">Defecto</string>
    <string name="ModelTextDescription">Descripción</string>

    <!--GenericSearch:-->
    <string name="CustomDescriptionSearch">Search</string>

    <!--UpdateDataBase:-->
    <string name="DialogTextViewSource">Data</string>
    <string name="DialogTextViewSourceFind">Select File</string>
    <string name="DialogTextViewDeleteSource">Delete</string>
    <string name="DialogTextViewUpdateSource">Update</string>
    <string name="DialogTextViewReadSource">Read</string>
    <string name="DialogTextViewCaptionUpdateSource">Update source</string>
</resources>