<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vsg.helper.ui.data.ui.DataBaseActivity">

    <RelativeLayout
        android:id="@+id/activity_update_db_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/activity_update_db_progress_bar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_update_db_progress_text"
            android:layout_below="@id/activity_update_db_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DialogCrudLayoutMargin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_activity_update_database_find_file_xml"
                    android:layout_width="@dimen/DialogCrudPictureActionSize"
                    android:layout_height="@dimen/DialogCrudPictureActionSize"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/pic_update_source_file" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="false"
                    android:text="@string/DialogTextViewSourceFind"
                    android:textAlignment="center"
                    android:textSize="@dimen/DialogCrudTextSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DialogCrudLayoutMargin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_activity_update_database_read_xml"
                    android:layout_width="@dimen/DialogCrudPictureActionSize"
                    android:layout_height="@dimen/DialogCrudPictureActionSize"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/pic_update_source_read_xml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="false"
                    android:text="@string/DialogTextViewSource"
                    android:textAlignment="center"
                    android:textSize="@dimen/DialogCrudTextSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DialogCrudLayoutMargin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_activity_update_database_read_database"
                    android:layout_width="@dimen/DialogCrudPictureActionSize"
                    android:layout_height="@dimen/DialogCrudPictureActionSize"
                    android:layout_gravity="center"
                    android:focusable="true"
                    app:srcCompat="@drawable/pic_update_source_read" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="false"
                    android:text="@string/DialogTextViewReadSource"
                    android:textAlignment="center"
                    android:textSize="@dimen/DialogCrudTextSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DialogCrudLayoutMargin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_activity_update_database_delete_database"
                    android:layout_width="@dimen/DialogCrudPictureActionSize"
                    android:layout_height="@dimen/DialogCrudPictureActionSize"
                    android:layout_gravity="center"
                    android:focusable="true"
                    app:srcCompat="@drawable/pic_update_source_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="false"
                    android:text="@string/DialogTextViewDeleteSource"
                    android:textAlignment="center"
                    android:textSize="@dimen/DialogCrudTextSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/DialogCrudLayoutMargin"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_activity_update_database_update"
                    android:layout_width="@dimen/DialogCrudPictureActionSize"
                    android:layout_height="@dimen/DialogCrudPictureActionSize"
                    android:layout_gravity="center"
                    android:focusable="true"
                    app:srcCompat="@drawable/pic_update_source_update" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="false"
                    android:text="@string/DialogTextViewUpdateSource"
                    android:textAlignment="center"
                    android:textSize="@dimen/DialogCrudTextSize"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@color/black"
            android:elevation="2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/DialogCrudMargin"
            android:layout_marginTop="@dimen/DialogCrudMargin"
            android:text="Log:"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_activity_update_db_log"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:height="150sp"
                android:background="@drawable/shadow_view"
                android:fontFamily="monospace"
                android:paddingStart="@dimen/DialogCrudTextPadding"
                android:paddingEnd="@dimen/DialogCrudTextPadding"
                android:scrollbarSize="15sp"
                android:scrollbars="vertical"
                android:text="@string/TextSuspenso"
                android:textSize="@dimen/DialogCrudLogTextSize" />


            <ImageView
                android:id="@+id/activity_update_iv_send"
                android:layout_width="@dimen/DialogCrudPictureSize"
                android:layout_height="@dimen/DialogCrudPictureSize"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/DialogCrudPictureMargin"
                android:src="@drawable/pic_export" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@color/black"
            android:elevation="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_activity_update_database"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/DialogCrudMargin">

            </ListView>
        </LinearLayout>

    </androidx.gridlayout.widget.GridLayout>
</RelativeLayout>